# TwinAIGym

./: .gitignore  README.md  customer_support_rl_report.html  customer_support_rl_trajectories.jsonl  llm_customer_support_replay.html  pyproject.toml
benchmarks/: maintenance_results.json  maintenance_results.md
benchmarks/representation_study/: REPORT.md  contrasts.json  scaling.json  summary.csv  summary.json
docs/: build_your_world.md  quickstart.md  representation_study.md  scientific_formulation.md
examples/: business_suite_basic.py  customer_support_adversarial.yaml  customer_support_basic.py  customer_support_benchmark_suite.py  customer_support_pytest_style.py  customer_support_rl_project.py  customer_support_scenario.yaml  gymnasium_training_stub.py  llm_training_and_evaluation.py  ollama_representation_pilot.py  representation_benchmark.py  scientific_benchmark.py
src/twin_ai_gym/: __init__.py  marketplace.py  pytest_plugin.py
src/twin_ai_gym/adapters/: __init__.py  frameworks.py  gymnasium.py
src/twin_ai_gym/core/: __init__.py  action.py  benchmark.py  dynamics.py  entity.py  env.py  episode.py  evaluation.py  events.py  observation.py  relation.py  reward.py  world.py
src/twin_ai_gym/experiments/: __init__.py  representation_benchmark.py
src/twin_ai_gym/renderers/: __init__.py  html.py  rl.py
src/twin_ai_gym/rl/: __init__.py  features.py  metrics.py  trajectory.py
src/twin_ai_gym/worlds/: __init__.py  business.py  maintenance.py
src/twin_ai_gym/worlds/customer_support/: __init__.py  actions.py  benchmarks.py  env.py  rewards.py
tests/: test_customer_support.py  test_representation_experiment.py  test_roadmap.py  test_scientific_core.py
