[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "twin-ai-gym"
version = "0.1.0"
description = "Graph-native digital twin environments for training and evaluating AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "TwinAIGym Authors" }
]
keywords = [
  "digital-twin",
  "knowledge-graph",
  "reinforcement-learning",
  "llm-agents",
  "gym"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/example/twin-ai-gym"
Repository = "https://github.com/example/twin-ai-gym"
Issues = "https://github.com/example/twin-ai-gym/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/twin_ai_gym"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
