[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "twin-ai-gym"
version = "0.1.0"
description = "Open-source testing and benchmarking environments for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Tommaso Arone" }
]
keywords = [
  "ai-agents",
  "agent-evaluation",
  "agent-benchmark",
  "agent-testing",
  "digital-twin",
  "knowledge-graph",
  "llm-agents",
  "gym"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
gymnasium = ["gymnasium>=0.29"]
llm = ["openai>=1.0"]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.entry-points.pytest11]
twinaigym = "twin_ai_gym.pytest_plugin"

[project.urls]
Homepage = "https://github.com/aronetommaso/TwinAIGym"
Repository = "https://github.com/aronetommaso/TwinAIGym"
Issues = "https://github.com/aronetommaso/TwinAIGym/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/twin_ai_gym"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
